--- a/app/flaskr/templates/parametres.html
+++ b/app/flaskr/templates/parametres.html
@@ -8,6 +8,7 @@
     <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.png">
     <script src="../static/js/main.js"></script>
     <script src="../static/js/reglage.js"></script>
+    <script src="../static/js/theme.js"></script>
 </head>
 <body class="slide-out" data-page="page5">
     <header>
@@ -67,20 +68,6 @@
 
         <div class="setting-item">
             <span class="setting-name">Date de Naissance</span>
-        </div>
-
-        <div class="setting-item">
-            <button class="collapsible"><span class="setting-name">Pseudo</span></button>
-            <div class="content">
-                <div class="btn" data-direction="front"> <!-- Ajoutez l'attribut data-direction si nécessaire -->
-                    <div class="btn-back">
-                        <p>Are you sure you want to do that?</p>
-                        <button class="yes">Yes</button>
-                        <button class="no">No</button>
-                    </div>
-                    <div class="btn-front">Delete</div>
-                </div>
-            </div>
         </div>
 
         <div class="setting-item">
