--- a/app/flaskr/static/css/page-parametre.css
+++ b/app/flaskr/static/css/page-parametre.css
@@ -1,256 +1,4 @@
-body {
-    background-color: #f0f0f0;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    margin-top: 2px;
-    padding-top: 60px;
-    padding-bottom: 60px;
-    overflow-y: auto;
-    height: calc(100% - 120px);
-    transition: background-color 0.3s, color 0.3s;
-}
-
-header, footer {
-    background-color: #f0f0f0;
-    color: #000000;
-    padding: 18px 0;
-    text-align: left;
-    position: fixed;
-    width: 100%;
-    box-shadow: 0 2px 20px rgba(24, 24, 24, 0.1);
-    z-index: 1000;
-}
-
-body.dark header, body.dark footer {
-    background-color: #333;
-    box-shadow: 0 2px 20px rgba(244, 242, 242, 0.123);
-}
-
-header {
-    top: 0;
-    overflow: hidden;
-    border-radius: 0 0 30px 30px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px 20px;
-}
-
-header img.ta-pp {
-    width: 35px;
-    height: 35px;
-    border-radius: 20%;
-    object-fit: cover;
-    margin-left: 1%;
-}
-
-.Name-page {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: 30px;
-    font-weight: bold;
-    color: #333;
-}
-
-body.dark .Name-page {
-    color: #fff;
-}
-
-footer {
-    bottom: 0;
-    border-radius: 30px 30px 0 0;
-    overflow: hidden;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.icone-friends, .icone-cam, .icone-discu, .icone-album, .icone-setting {
-    width: 30px;
-    height: 30px;
-    margin: 0 10px;
-    padding-left: 10px;
-    padding-right: 10px;
-    transition: transform 0.2s ease-in-out;
-    opacity: 50%;
-}
-
-.icone-friends:hover, .icone-cam:hover, .icone-discu:hover, .icone-album:hover, .icone-setting:hover {
-    transform: scale(1.5);
-}
-
-.footer-button {
-    background: none;
-    border: none;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-}
-
-.settings-list {
-    width: 100%;
-    max-width: 600px;
-    margin: 20px auto;
-    background-color: #fff;
-    border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
-}
-
-body.dark .settings-list {
-    background-color: #333;
-    box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-}
-
-.setting-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px 20px;
-    border-bottom: 1px solid #eee;
-}
-
-body.dark .setting-item {
-    border-bottom: 1px solid #333;
-}
-
-.setting-item:last-child {
-    border-bottom: none;
-}
-
-.switch {
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 24px;
-}
-
-.switch input {
-    opacity: 0;
-    width: 0;
-    height: 0;
-}
-
-.slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: #ccc;
-    transition: .4s;
-}
-
-body.dark .slider {
-    background-color: #836d6d43;
-}
-
-.slider:before {
-    position: absolute;
-    content: "";
-    height: 18px;
-    width: 18px;
-    left: 3px;
-    bottom: 3px;
-    background-color: white;
-    transition: .4s;
-}
-
-input:checked + .slider {
-    background-color: #2196F3;
-}
-
-input:checked + .slider:before {
-    transform: translateX(16px);
-}
-
-.slider.round {
-    border-radius: 24px;
-}
-
-.slider.round:before {
-    border-radius: 50%;
-}
-
-select {
-    background-color: #fff;
-    margin: 0;
-    border: 0;
-    font-size: 17px;
-    padding: 0;
-}
-
-body.dark select {
-    background-color: #333;
-    color: #fff;
-}
-
-body.dark {
-    background-color: #333;
-    color: #fff;
-}
-
-#saveSettings {
-    padding: 10px 20px;
-    background-color: #007BFF;
-    color: white;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-body.dark #saveSettings {
-    background-color: #0056b3;
-    border: 1px solid #333;
-}
-
-#saveSettings:hover {
-    background-color: #0056b3;
-}
-
-body.dark #saveSettings:hover {
-    background-color: #007BFF;
-}
-
-.save-btn {
-    max-width: 600px;
-    margin: auto;
-    padding: 20px;
-    border-radius: 10px;
-}
-
-body.dark .save-btn {
-    background-color: #333;
-}
-
-.collapsible {
-    background-color: #333;
-    color: white;
-    cursor: pointer;
-    padding: 18px;
-    width: 100%;
-    border: none;
-    text-align: left;
-    outline: none;
-    font-size: 17px;
-}
-  
-.content {
-    padding: 0 18px;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.175s ease-out;
-}
-
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
-
+/* Reset default margin and padding */
 html, body {
   width: 100%;
   height: 100%;
@@ -258,29 +6,253 @@ html, body {
   user-select: none;
 }
 
+/* Font Import */
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
+
+/* Body Styling */
 body {
-  display: flex;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-color: #f0f0f0;
+  font-family: 'Roboto', Arial, sans-serif;
   font-size: 18px;
-  perspective: 1000px;
-  background-color: #000;
+  display: flex;
   flex-direction: column;
+  align-items: center;
   justify-content: center;
+  margin: 0;
+  padding: 60px 0;
+  height: calc(100% - 120px);
+  overflow-y: auto;
+  transition: background-color 0.3s, color 0.3s;
+  perspective: 1000px;
+}
+
+body.dark {
+  background-color: #333;
+  color: #fff;
+}
+
+/* Header and Footer Styling */
+header, footer {
+  background-color: #f0f0f0;
+  color: #000;
+  padding: 18px 0;
+  text-align: left;
+  position: fixed;
+  width: 100%;
+  box-shadow: 0 2px 20px rgba(24, 24, 24, 0.1);
+  z-index: 1000;
+}
+
+body.dark header, body.dark footer {
+  background-color: #333;
+  box-shadow: 0 2px 20px rgba(244, 242, 242, 0.123);
+}
+
+header {
+  top: 0;
+  border-radius: 0 0 30px 30px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+header img.ta-pp {
+  width: 35px;
+  height: 35px;
+  border-radius: 20%;
+  object-fit: cover;
+  margin-left: 1%;
+}
+
+.Name-page {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 30px;
+  font-weight: bold;
+  color: #333;
+}
+
+body.dark .Name-page {
+  color: #fff;
+}
+
+footer {
+  bottom: 0;
+  border-radius: 30px 30px 0 0;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.description {
-  margin-top: 50px;
-  text-align: center;
-  color: #999;
-  transition: opacity 0.3s ease;
+/* Icon Styling */
+.icone-friends, .icone-cam, .icone-discu, .icone-album, .icone-setting {
+  width: 30px;
+  height: 30px;
+  margin: 0 10px;
+  padding: 0 10px;
+  transition: transform 0.2s ease-in-out;
+  opacity: 0.5;
 }
 
-.description a {
-  color: #4A9DF6;
-  text-decoration: none;
+.icone-friends:hover, .icone-cam:hover, .icone-discu:hover, .icone-album:hover, .icone-setting:hover {
+  transform: scale(1.5);
 }
 
+/* Button Styling */
+.footer-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+#saveSettings {
+  padding: 10px 20px;
+  background-color: #007BFF;
+  color: white;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+body.dark #saveSettings {
+  background-color: #0056b3;
+  border: 1px solid #333;
+}
+
+#saveSettings:hover {
+  background-color: #0056b3;
+}
+
+body.dark #saveSettings:hover {
+  background-color: #007BFF;
+}
+
+/* Settings List Styling */
+.settings-list {
+  width: 100%;
+  max-width: 600px;
+  margin: 20px auto;
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+body.dark .settings-list {
+  background-color: #333;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
+}
+
+.setting-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px 20px;
+  border-bottom: 1px solid #eee;
+}
+
+body.dark .setting-item {
+  border-bottom: 1px solid #333;
+}
+
+.setting-item:last-child {
+  border-bottom: none;
+}
+
+/* Switch Styling */
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 24px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  transition: 0.4s;
+}
+
+body.dark .slider {
+  background-color: #836d6d43;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 18px;
+  width: 18px;
+  left: 3px;
+  bottom: 3px;
+  background-color: white;
+  transition: 0.4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:checked + .slider:before {
+  transform: translateX(16px);
+}
+
+.slider.round {
+  border-radius: 24px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
+/* Select Styling */
+select {
+  background-color: #fff;
+  border: 0;
+  font-size: 17px;
+  padding: 0;
+}
+
+body.dark select {
+  background-color: #333;
+  color: #fff;
+}
+
+/* Collapsible Styling */
+.collapsible {
+  background-color: #333;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 17px;
+}
+
+.content {
+  padding: 0 18px;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.175s ease-out;
+}
+
+/* Additional Styling for Buttons */
 .btn.is-open ~ .description {
   opacity: 0;
 }
@@ -290,9 +262,7 @@ body {
   position: relative;
   width: 200px;
   height: 80px;
-  transition: width 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000),
-              height 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000),
-              transform 0.8s cubic-bezier(0.175, 0.885, 0.320, 1.275);
+  transition: width 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000), height 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000), transform 0.8s cubic-bezier(0.175, 0.885, 0.320, 1.275);
   transform-style: preserve-3d;
   transform-origin: 50% 50%;
   text-align: center;
@@ -309,12 +279,13 @@ body {
   cursor: pointer;
   backface-visibility: hidden;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-  transition: background 0.15s ease,
-              line-height 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000);
+  transition: background 0.15s ease, line-height 0.8s cubic-bezier(0.230, 1.000, 0.320, 1.000);
 }
+
 .btn-front:hover {
   background-color: #f8877b;
 }
+
 .btn.is-open .btn-front {
   pointer-events: none;
   line-height: 160px;
@@ -330,10 +301,11 @@ body {
   overflow: hidden;
   transition: box-shadow 0.8s ease;
 }
+
 .btn-back p {
-  margin-top: 27px;
-  margin-bottom: 25px;
+  margin: 27px 0;
 }
+
 .btn-back button {
   padding: 12px 20px;
   width: 30%;
@@ -379,8 +351,8 @@ body {
 }
 
 .btn.is-open {
-  width: 50;
-  height: 25;
+  width: 50px;
+  height: 25px;
 }
 
 .btn[data-direction="top"].is-open {
