--- a/app/flaskr/templates/amis.html
+++ b/app/flaskr/templates/amis.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit Amis</title>
     <link rel="stylesheet" type="text/css" href="../static/css/page-amis.css">
-    <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.ico">
+    <link rel="icon"    type="image/png" href="../static/img/logo_E-esprit.png">
     <script src="../static/js/main.js"></script>
+    <script src="../static/js/theme.js"></script>
 </head>
 <body class="slide-out" data-page="page1">
     <header>
@@ -43,7 +44,7 @@
         <div class="ami" onclick="redirectToChatPage()">
             <img src="../static/img/IMG_20240411_160531_906.jpg" alt="pp" class="profilespictures">
             <div class="amis-info">
-                <span class="amisname">ZOA</span>
+                <span class="amisname">ZOLA</span>
                 <span class="amitemps">Votre amis depuis: ... jours</span>
             </div>
         </div>
