--- a/app/flaskr/templates/album.html
+++ b/app/flaskr/templates/album.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,7 @@
     </header>
 
     <div class="listealbum">
-        <div class="grid-item">Album du groupe "groupe d'amis"</div>
+        <button class="grid-item" onclick="pagealbumtest()">Album du groupe "groupe d'amis"</button>
         <div class="grid-item">Album du chat avec ....</div>
         <div class="grid-item">Album du groupe ...</div>
         <div class="grid-item">Album du chat........</div>
