--- a/app/flaskr/templates/pagealbumex.html
+++ b/app/flaskr/templates/pagealbumex.html
@@ -1,62 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit albumex</title>
-    <link rel="stylesheet" type="text/css" href="../static/css/pagealbumex.css">
+    <link rel="stylesheet" type="text/css" href="../static/css/pagealbumex.scss">
     <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
     <script src="../static/js/main.js"></script>
     <script src="../static/js/album.js"></script>
 </head>
-<body>
-    <div class="calendar">
-        <div class="calendar__picture">
-          <h2>18, Sunday</h2>
-          <h3>November</h3>
-        </div>
-        <div class="calendar__date">
-          <div class="calendar__day">M</div>
-          <div class="calendar__day">T</div>
-          <div class="calendar__day">W</div>
-          <div class="calendar__day">T</div>
-          <div class="calendar__day">F</div>
-          <div class="calendar__day">S</div>
-          <div class="calendar__day">S</div>
-          <div class="calendar__number"></div>
-          <div class="calendar__number"></div>
-          <div class="calendar__number"></div>
-          <div class="calendar__number">1</div>
-          <div class="calendar__number">2</div>
-          <div class="calendar__number">3</div>
-          <div class="calendar__number">4</div>
-          <div class="calendar__number">5</div>
-          <div class="calendar__number">6</div>
-          <div class="calendar__number">7</div>
-          <div class="calendar__number">8</div>
-          <div class="calendar__number">9</div>
-          <div class="calendar__number">10</div>
-          <div class="calendar__number">11</div>
-          <div class="calendar__number">12</div>
-          <div class="calendar__number">13</div>
-          <div class="calendar__number">14</div>
-          <div class="calendar__number">15</div>
-          <div class="calendar__number">16</div>
-          <div class="calendar__number">17</div>
-          <div class="calendar__number calendar__number--current">18</div>
-          <div class="calendar__number">19</div>
-          <div class="calendar__number">20</div>
-          <div class="calendar__number">21</div>
-          <div class="calendar__number">22</div>
-          <div class="calendar__number">23</div>
-          <div class="calendar__number">24</div>
-          <div class="calendar__number">25</div>
-          <div class="calendar__number">26</div>
-          <div class="calendar__number">27</div>
-          <div class="calendar__number">28</div>
-          <div class="calendar__number">29</div>
-          <div class="calendar__number">3000</div>
-        </div>
-      </div>
-</body>
+<main class="card">
+  <section class="card__header">
+    <h3>Thursday 7th</h3>
+    <h3>January 2020</h3>
+  </section>
+  <section class="card__body">
+    <ul class="card__body--days">
+      <li>mon</li>
+      <li>tue</li>
+      <li>wed</li>
+      <li>thu</li>
+      <li>fri</li>
+      <li>sat</li>
+      <li>sun</li>
+    </ul>
+    <ul class="card__body--dates">
+      <li class="prev">30</li>
+      <li class="prev">31</li>
+      <li>1</li>
+      <li>2</li>
+      <li>3</li>
+      <li>4</li>
+      <li>5</li>
+      <li>6</li>
+      <li class="active">7</li>
+      <li>8</li>
+      <li>9</li>
+      <li>10</li>
+      <li>11</li>
+      <li>12</li>
+      <li>13</li>
+      <li>14</li>
+      <li>15</li>
+      <li class="circle orange">16 <span>5</span></li>
+      <li>17</li>
+      <li>18</li>
+      <li class="circle purple">19 <span>6</span></li>
+      <li>20</li>
+      <li>21</li>
+      <li>22</li>
+      <li>23</li>
+      <li>24</li>
+      <li>25</li>
+      <li>26</li>
+      <li>27</li>
+      <li>28</li>
+      <li>29</li>
+      <li>30</li>
+      <li>31</li>
+      <li class="next">1</li>
+      <li class="next">2</li>
+    </ul>
+  </section>
+  <div class="card__footer">
+    <p>11:35 am</p>
+    <a href="#" class="add">+</a>
+    <p>12<sup>o</sup> C</p>
+  </div>
+</main>
 </html>
