--- a/app/flaskr/static/css/pagealbumex.scss
+++ b/app/flaskr/static/css/pagealbumex.scss
@@ -1,101 +1,146 @@
+$bg-color: #78ACCD;
+$white: #ffffff;
+$black: #333333;
+$gray: #7D8994;
+$orange: #DE6E46;
+$purple: #AE5989;
+
+$radius: 50%;
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html {
+    font-size: 10px;
+    font-family: sans-serif;
+    line-height: 1.6;
+}
+
 body {
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  font-family: 'Poppins', sans-serif;
-  background: url("https://images.unsplash.com/photo-1516912481808-3406841bd33c?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=183f2924ba5a8429441804609b2d4f61") no-repeat center / cover;
-  
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    background: inherit;
-    filter: blur(10px);
-  }
+    background: $bg-color;
+    color: $black;
+    font-size: 1.5rem;
 }
 
-.calendar {
-  position: relative;
-  width: 300px;
-  background-color: #fff;
-  box-sizing: border-box;
-  box-shadow: 0 5px 50px rgba(#000, 0.5);
-  border-radius: 8px;
-  overflow: hidden;
+ul {
+    list-style: none;
 }
 
-.calendar__picture {
-  position: relative;
-  height: 200px;
-  padding: 20px;
-  color: #fff;
-  background: #262626 url("https://images.unsplash.com/photo-1516912481808-3406841bd33c?ixlib=rb-0.3.5&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ&s=183f2924ba5a8429441804609b2d4f61") no-repeat center / cover;
-  text-shadow: 0 2px 2px rgba(#000, 0.2);
-  box-sizing: border-box;
-  
-  &::before {
-    content: "";
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    position: absolute;
-    background: linear-gradient(to top, rgba(#000, 0.25), rgba(#000, 0.1));
-  }
-  
-  h2 {
+.card {
+    background: $white;
+    width: 90%;
+    max-width: 40rem;
+    min-height: 40rem;
+    margin: 5rem auto;
+    display: grid;
+    grid-template-rows: 8rem auto 10rem;
+    box-shadow: 0 1rem 2.5rem rgb(27, 64, 94);
+
+    &__header {
+        padding: 0 1.25rem;
+        color: $gray;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    &__body {
+        padding: 1.5rem 2rem;
+        border-top: 1px solid #ccc;
+        border-bottom: 1px solid #ccc;
+
+        &--days {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 4rem;
+
+            li {
+                flex: 1;
+                font-weight: bold;
+                text-transform: uppercase;
+                text-align: center;
+                color: $gray;
+                margin: 0 1px;
+            }
+        }
+        &--dates {
+            display: grid;
+            gap: 3px;
+            grid-template-columns: repeat(7, 1fr);
+            justify-items: center;
+            text-align: center;
+            li {
+                width: 3.5rem;
+                height: 3.5rem;
+                display: grid;
+                place-items: center;
+                font-weight: bold;
+                position: relative;
+            }
+            li.prev,
+            li.next {
+                color: #ccc;
+            }
+            li.active {
+                background: $orange;
+                color: $white;
+                border-radius: $radius;
+            }
+            li.circle {
+                border: 2px solid;
+                border-radius: $radius;
+                span {
+                    position: absolute;
+                    top: -0.75rem;
+                    right: -0.5rem;
+                    width: 1.75rem;
+                    height: 1.75rem;
+                    font-size: 1.2rem;
+                    color: $white;
+                    border-radius: $radius;
+                }
+            }
+            .circle.orange {
+                border-color: $orange;
+                span {
+                    background: $orange;
+                }
+            }
+            .circle.purple {
+                border-color: $purple;
+                span {
+                    background: $purple;
+                }
+            }
+        }
+    }
+    &__footer {
+        @extend .card__header;
+        color: $black;
+        font-weight: bold;
+
+        .add {
+            text-decoration: none;
+            color: inherit;
+            border: 2px solid $orange;
+            border-radius: $radius;
+            width: 3.5rem;
+            height: 3.5rem;
+            padding-top: 0.25rem;
+            display: grid;
+            place-items: center;
+        }
+    }
+}
+.grid-item{
+	background: none;
+    border: none;
+    padding: 0;
     margin: 0;
-  }
-  
-  h3 {
-    margin: 0;
-    font-weight: 500;
-  }
-}
-
-.calendar__date {
-  padding: 20px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(25px, 1fr));
-  grid-gap: 10px;
-  box-sizing: border-box;
-}
-
-.calendar__day {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 25px;
-  font-weight: 600;
-  color: #262626;
-  
-  &:nth-child(7) {
-    color: #ff685d;
-  }
-}
-
-.calendar__number {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 25px;
-  color: #262626;
-
-  &:nth-child(7n) {
-    color: #ff685d;
-    font-weight: 700;
-  }
-  
-  &--current,
-  &:hover {
-    background-color: #009688;
-    color: #fff !important;
-    font-weight: 700;
     cursor: pointer;
-  }
+    width: 30px; /* ajustez la largeur à votre convenance */
+    height: 30px; /* ajustez la hauteur à votre convenance */
+    transition: transform 0.2s ease-in-out;
 }
