--- a/app/flaskr/static/css/page-parametre.css
+++ b/app/flaskr/static/css/page-parametre.css
@@ -44,7 +44,7 @@ header, footer {
 }
 
 body.dark header, body.dark footer {
-  background-color: #333;
+  background-color: #2e2e2e;
   box-shadow: 0 2px 20px rgba(244, 242, 242, 0.123);
 }
 
@@ -152,11 +152,11 @@ body.dark .settings-list {
   justify-content: space-between;
   align-items: center;
   padding: 15px 20px;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #eee;  
 }
 
 body.dark .setting-item {
-  border-bottom: 1px solid #333;
+  border-bottom: 1px solid #444;
 }
 
 .setting-item:last-child {
