changement input adresse mail et num de tel

--- a/app/flaskr/static/css/page-parametre.css
+++ b/app/flaskr/static/css/page-parametre.css
@@ -171,6 +171,14 @@ body.dark .setting-item {
   height: 24px;
 }
 
+body.dark input.input-adresse-mail [type="text"] {
+  background-color: #333;
+}
+
+.input-adresse-mail {
+  background-color: #333;
+}
+
 .switch input {
   opacity: 0;
   width: 0;
