--- a/app/flaskr/templates/parametres.html
+++ b/app/flaskr/templates/parametres.html
@@ -52,10 +52,16 @@
 
         <div class="setting-item">
             <span class="setting-name">E-Mail</span>
+            <label class="input-adresse-mail">
+                <input type="text">
+            </label>
         </div>
 
         <div class="setting-item">
             <span class="setting-name">Numéro de Téléphone</span>
+            <label class="input-adresse-mail">
+                <input type="text">
+            </label>
         </div>
 
         <div class="setting-item">
