--- a/app/flaskr/templates/chat.html
+++ b/app/flaskr/templates/chat.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit Chat</title>
     <link rel="stylesheet" type="text/css" href="../static/css/page-chat.css">
-    <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
+    <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.png">
     <script src="../static/js/main.js"></script>
- 
+    <script src="../static/js/theme.js"></script> 
 </head>
 <body class="slide-out" data-page="page3">
     <header>
