--- a/app/flaskr/templates/photo.html
+++ b/app/flaskr/templates/photo.html
@@ -5,15 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit appareil photo</title>
     <link rel="stylesheet" type="text/css" href="../static/css/page-appphoto.css">
-    <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
+    <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.png">
     <script src="../static/js/main.js"></script>
+    <script src="../static/js/appareil-photo.js"></script>
+    <script src="../static/js/theme.js"></script>
 </head>
 <body class="slide-out" data-page="page2">
-    <header>
-        <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
-        <div class="Name-page">Photo</div>
-    </header>
-
+    <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
+    <div class="Name-page">Photo</div>
     <nav>
         <!-- <video id="video" class="lnAeT" autoplay data-projection-id="153"></video> -->
     </nav>
