--- a/app/flaskr/templates/pagealbumex.html
+++ b/app/flaskr/templates/pagealbumex.html
@@ -45,8 +45,10 @@
               <div class="second">
                 <span>04</span>
                 <span>05</span>
-                <span class="event">06</span>
-                <span class="nbphoto">+9</span>
+                <span class="day-container">
+                  <span>06</span>
+                  <span class="nbphoto">+9</span>
+                </span>
                 <span>07</span>
                 <span>08</span>
                 <span>09</span>
@@ -65,7 +67,10 @@
 
               <div class="fourth">
                 <span>18</span>
-                <span>19</span>
+                <span class="day-container">
+                  <span>19</span>
+                  <span class="nbphoto">2</span>
+                </span>
                 <span>20</span>
                 <span>21</span>
                 <span>22</span>
