--- a/app/flaskr/static/css/pagealbumex.css
+++ b/app/flaskr/static/css/pagealbumex.css
@@ -67,10 +67,17 @@ body {
   padding: 30px 40px;
 }
 
-.days {
+.day {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 0;
+  flex-grow: 1;
+  height: 100px;
+  border-right: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  text-align: center;
 }
 
 .weeks {
@@ -107,31 +114,23 @@ body {
   font-weight: 600;
 }
 
-.event {
+.day-container {
   position: relative;
 }
 
 .nbphoto {
   position: absolute;
-  top: -10px;
-  right: -20px;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10px;
+  height: 10px;
+  top: 0;
+  right: 0;
   border-radius: 50%;
-  background-color: #f78536;
+  background-color: #ff6a00;
   color: #fff;
   font-size: 12px;
-  text-align: center;
-  line-height: 20px;
-}
-
-.event:after {
-  content: '•';
-  color: #f78536;
-  font-size: 3em;
-  position: absolute;
-  transform: translate(0%, -80%);
 }
 
 
