--- a/app/flaskr/templates/album.html
+++ b/app/flaskr/templates/album.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>E-Spirit album</title>
     <link rel="stylesheet" type="text/css" href="../static/css/page-album.css">
-    <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.ico">
+    <link rel="icon" type="image/png" href="../static/img/logo_E-esprit.png">
     <script src="../static/js/main.js"></script>
     <script src="../static/js/album.js"></script>
     <script src="../static/js/theme.js"></script>
@@ -46,4 +46,3 @@
     <script src="../static/js/main.js"></script>
 </body>
 </html>
-
