--- a/app/flaskr/templates/pagealbumex.html
+++ b/app/flaskr/templates/pagealbumex.html
@@ -9,121 +9,98 @@
     <script src="../static/js/main.js"></script>
     <script src="../static/js/album.js"></script>
 </head>
-  <!-- inspired by http://colorhunt.co/c/8184 and 
-    https://dribbble.com/shots/2407357-Calendar%60 -->
+<body>
+  <header>
+    <img src="../static/img/imagespp.jpeg" alt="Photo" class="ta-pp">
+    <div class="Name-page">Album</div>
+  </header>
 
-    <div class="container">
-      <div class="calendar">
-        <div class="front">
-          <div class="current-date">
-            <h1>Friday 15th</h1>
-            <h1>January 2016</h1> 
-          </div>
+  <div class="container">
+    <div class="calendar">
+      <div class="front">
+        <div class="current-date">
+          <h1>Mercredi 1er</h1>
+          <h1>Août 2024</h1> 
+        </div>
 
-          <div class="current-month">
-            <ul class="week-days">
-              <li>MON</li>
-              <li>TUE</li>
-              <li>WED</li>
-              <li>THU</li>
-              <li>FRI</li>
-              <li>SAT</li>
-              <li>SUN</li>
-            </ul>
+        <div class="current-month">
+          <ul class="week-days">
+            <li>LND</li>
+            <li>MRD</li>
+            <li>MRC</li>
+            <li>JED</li>
+            <li>VND</li>
+            <li>SMD</li>
+            <li>DMN</li>
+          </ul>
 
-            <div class="weeks">
-              <div class="first">
-                <span class="last-month">28</span>
-                <span class="last-month">29</span>
-                <span class="last-month">30</span>
-                <span class="last-month">31</span>
-                <span>01</span>
-                <span>02</span>
-                <span>03</span>
-              </div>
+          <div class="weeks">
+            <div class="first">
+              <span class="last-month">28</span>
+              <span class="last-month">29</span>
+              <span class="last-month">30</span>
+              <span class="last-month">31</span>
+              <span>01</span>
+              <span>02</span>
+              <span>03</span>
+            </div>
 
-              <div class="second">
-                <span>04</span>
-                <span>05</span>
-                <span class="day-container">
-                  <span>06</span>
-                  <span class="nbphoto">+9</span>
-                </span>
-                <span>07</span>
-                <span>08</span>
-                <span>09</span>
-                <span>10</span>
-              </div>
+            <div class="second">
+              <span>04</span>
+              <span>05</span>
+              <span class="day-container">
+                <span>06</span>
+                <span class="nbphoto">+9</span>
+              </span>
+              <span>07</span>
+              <span>08</span>
+              <span>09</span>
+              <span>10</span>
+            </div>
 
-              <div class="third">
-                <span>11</span>
-                <span>12</span>
-                <span>13</span>
-                <span>14</span>
-                <span class="active">15</span>
-                <span>16</span>
-                <span>17</span>
-              </div>
+            <div class="third">
+              <span>11</span>
+              <span>12</span>
+              <span>13</span>
+              <span>14</span>
+              <span>15</span>
+              <span>16</span>
+              <span>17</span>
+            </div>
 
-              <div class="fourth">
-                <span>18</span>
-                <span class="day-container">
-                  <span>19</span>
-                  <span class="nbphoto">2</span>
-                </span>
-                <span>20</span>
-                <span>21</span>
-                <span>22</span>
-                <span>23</span>
-                <span>24</span>
-              </div>
+            <div class="fourth">
+              <span>18</span>
+              <span class="day-container">
+                <span>19</span>
+                <span class="nbphoto">2</span>
+              </span>
+              <span>20</span>
+              <span>21</span>
+              <span>22</span>
+              <span>23</span>
+              <span>24</span>
+            </div>
 
-              <div class="fifth">
-                <span>25</span>
-                <span>26</span>
-                <span>27</span>
-                <span>28</span>
-                <span>29</span>
-                <span>30</span>
-                <span>31</span>
-              </div>
+            <div class="fifth">
+              <span>25</span>
+              <span>26</span>
+              <span>27</span>
+              <span>28</span>
+              <span>29</span>
+              <span>30</span>
+              <span>31</span>
             </div>
           </div>
         </div>
-
-        <div class="back">
-          <input placeholder="What's the event?">
-          <div class="info">
-            <div class="date">
-              <p class="info-date">
-              Date: <span>Jan 15th, 2016</span>
-              </p>
-              <p class="info-time">
-                Time: <span>6:35 PM</span>
-              </p>
-            </div>
-            <div class="address">
-              <p>
-                Address: <span>129 W 81st St, New York, NY</span>
-              </p>
-            </div>
-            <div class="observations">
-              <p>
-                Observations: <span>Be there 15 minutes earlier</span>
-              </p>
-            </div>
-          </div>
-
-          <div class="actions">
-            <button class="save">
-              Save <i class="ion-checkmark"></i>
-            </button>
-            <button class="dismiss">
-              Dismiss <i class="ion-android-close"></i>
-            </button>
-          </div>
-        </div>
-
       </div>
     </div>
+  </div>
+  <footer>
+    <button class="footer-button" onclick="pageamis()"><img src="../static/img/amis.png" alt="icone-friends" class="icone-friends"></button>
+    <button class="footer-button" onclick="pagecam()"><img src="../static/img/camera.png" alt="icone-cam" class="icone-cam"></button>
+    <button class="footer-button" onclick="pagechat()"><img src="../static/img/icons8-bulle-50.png" alt="icone-discu" class="icone-discu"></button>
+    <button class="footer-button" onclick="pagealbum()"><img src="../static/img/album-photo.png" alt="icone-album" class="icone-album"></button>
+    <button class="footer-button" onclick="pageparametre()"><img src="../static/img/parametres.png" alt="icone-setting" class="icone-setting"></button>
+  </footer>
+</body>
 </html>
