--- a/app/flaskr/static/css/pagealbumex.css
+++ b/app/flaskr/static/css/pagealbumex.css
@@ -104,11 +104,6 @@ body {
   padding: 10px;
 }
 
-.weeks span.active {
-  background: #f78536;
-  border-radius: 50%;
-}
-
 .weeks span:not(.last-month):hover {
   cursor: pointer;
   font-weight: 600;
@@ -212,10 +207,6 @@ body {
   cursor: pointer;
 }
 
-.actions button:active {
-  background: #5889a0;
-  outline: none;
-}
 
 /* Flip animation */
 
@@ -225,4 +216,105 @@ body {
 
 .front, .back {
   backface-visibility: hidden;
+}
+
+
+
+
+body{
+	background-color: #f0f0f0;
+	font-family: Arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	margin-top: 2px;
+	padding-top: 60px; /* Ajuste la hauteur du contenu pour tenir compte du header */
+	padding-bottom: 60px; /* Ajuste la hauteur du contenu pour tenir compte du footer */
+	overflow-y: auto; /* Permet le défilement vertical si le contenu est plus grand que l'écran */
+	height: calc(100% - 120px); /* Ajuste la hauteur pour prendre en compte le header et le footer */
+}
+
+header, footer {
+    background-color: #f0f0f0;
+    color: #000000;
+    padding: 18px 0;
+    text-align: left;
+    position: fixed;
+    width: 100%;
+    box-shadow: 0 2px 80px rgba(24, 24, 24, 0.1);
+    z-index: 1000;
+}
+
+header {
+    top: 0;
+    overflow: hidden;
+    border-radius: 0 0 30px 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between; /* Adjust the alignment to properly place elements */
+    padding: 10px 20px; /* Add padding for some spacing inside the header */
+}
+
+header img.ta-pp {
+    width: 35px; /* Set the desired width */
+    height: 35px; /* Set the desired height */
+    border-radius: 20%; /* Round the corners */
+    object-fit: cover; /* Ensure the image covers the area without distortion */
+    margin-left: 1%;
+}
+
+.Name-page {
+    position: absolute;
+    top: 50%; /* centre verticalement */
+    left: 50%; /* centre horizontalement */
+    transform: translate(-50%, -50%); /* ajuste la position pour centrer le texte */
+    font-size: 30px; /* ajustez la taille de la police à votre convenance */
+    font-weight: bold; /* ajustez le poids de la police à votre convenance */
+    color: #333; /* ajustez la couleur du texte à votre convenance */
+}
+
+footer {
+    bottom: 0; /* Ajouté pour que le footer soit en bas de page */
+    border-radius: 30px 30px 0 0; /* Arrondi les deux angles supérieurs */
+    overflow: hidden;
+	/* border-top: 1px solid #a59999; */
+	display: flex;
+	justify-content: space-between 5px;
+	align-items: center;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+    
+}
+
+  
+.icone-friends,.icone-cam,.icone-discu,.icone-album,.icone-setting {
+	width: 30px; /* ajustez la largeur à votre convenance */
+	height: 30px; /* ajustez la hauteur à votre convenance */
+	margin: 0 10px;
+	padding-left: 10px;
+	padding-right: 10PX;
+	transition: transform 0.2s ease-in-out;
+    opacity: 50%;
+    
+}
+  
+.icone-friends:hover,.icone-cam:hover,.icone-discu:hover,.icone-album:hover,.icone-setting:hover {
+    transform: scale(1.5); /* Augmente légèrement la taille au survol */
+}
+
+
+.footer-button{
+	background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    cursor: pointer;
+}
+.footer-button img,.reglage-button img {
+    width: 30px; /* ajustez la largeur à votre convenance */
+    height: 30px; /* ajustez la hauteur à votre convenance */
+    transition: transform 0.2s ease-in-out;
 }
